correction-exam/svc-bookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  selector:
    run: bookstack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
