correction-exam/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookstack
spec:
  host: bookstack-correction.apps.openshift.kakor.ovh
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bookstack
    weight: 100
  wildcardPolicy: None
